# tennis-ai

./: .cursorrules  .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.test.json  vercel.json
.cursor/: mcp.json
backend/: README.md  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  tennis_tournament.db
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  matches.py  players.py  tournaments.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  base.py  game.py  match.py  player.py  registration.py  set.py  tournament.py
backend/app/schemas/: __init__.py  match.py  player.py  registration.py  responses.py  tournament.py
backend/app/services/: __init__.py  match.py  player.py  registration.py  tournament.py
docs/: ai_changelog.md  architecture.md  backend.md  datamodel.md  description.md  frontend.md  todo.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/.next/: app-build-manifest.json  trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
tools/: flux.ts  gemini-image-tool.js  gemini.ts  generate-video.ts  github-cli.ts  html-to-md.ts  image-optimizer.ts  imagen.ts  invert-colors.ts  minimax-image.ts  openai-image-tool.js  package.json  recraft.ts  tsconfig.json  vercel-cli.ts
tools/utils/: download.ts
(+131 files in other folders)
